fix(css): improve scrollbar position

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,6 +35,7 @@ body {
 
 html {
   scroll-behavior: smooth;
+  overflow-y: overlay;
 }
 
 @media screen and (min-width: 425px) {
